#12 [1h] Erweiterung FR05 Gerate umbenennen und entfernen